# Tongji-Together

./: README.md  merged_project.txt  readfile.py
backend/: .coverage  pyproject.toml  requirements.in  requirements.txt  server.py  test.sh
backend/instance/: TJTX.db
backend/tests/: conftest.py  test_unit.py
frontend/: .env  .env.development  .env.production  .eslintrc.cjs  .prettierrc.cjs  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue  manifest.json  pages.json
frontend/src/api/: request.js  service.js
frontend/src/api/modules/: auth.js
frontend/src/components/: TabBar.vue
frontend/src/layouts/: TabBar.vue  default.vue  defaultbar.vue
frontend/src/pages/index/: TripCard.vue  TripDisplay.vue  TripForm.vue  TripMap.vue  index.vue
frontend/src/pages/user/: login.vue  user.vue
frontend/src/store/: app.js  user.js
